Fix dark mode

--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -18,6 +18,14 @@
   border-radius: 8px;
 }
 
+#icon-dark {
+  display: none;
+}
+
+#icon-light {
+  cursor: pointer;
+}
+
 .breadcrumbs {
   text-decoration: none;
 }
